--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="/css/main.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
@@ -61,6 +62,7 @@
           $(".navbar-menu").toggleClass("is-active");
     
       });
+  
     });
   </script>
   </body>
