--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
     <title>React App</title>
   </head>
